# fdm-tracker

./: .gitignore  run-dev.ps1
backend/: .dockerignore  .env.example  Dockerfile  README.md  SQLITE_EXPORT.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260422_0001_initial.py  20260422_0002_email_verification.py  20260422_0003_user_position.py  20260422_0004_teams.py  20260422_0005_target_hours.py  20260429_0006_meetings_holidays.py  20260429_0007_meeting_attendees.py  20260429_0008_holiday_kind.py  20260430_0009_meeting_password.py  20260430_0010_security_hardening.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  hmac_verify.py  logging_config.py  main.py  rate_limit.py  security.py  sqlite_compat.py
backend/app/cli/: export_sqlite.py  gmail_oauth.py  import_desktop_buffer.py  init_db.py  rebuild_summaries.py  seed_admin.py  verify_hardening.py
backend/app/models/: __init__.py  activity.py  audit_log.py  break_log.py  daily_summary.py  device.py  email_verification.py  hmac_nonce.py  holiday.py  meeting.py  session.py  settings.py  team.py  user.py
backend/app/routers/: activity.py  admin.py  auth.py  breaks.py  holidays.py  me.py  meetings.py  sessions.py  teams.py
backend/app/schemas/: activity.py  admin.py  auth.py  break_log.py  holiday.py  meeting.py  session.py  settings.py  summary.py  team.py
backend/app/services/: anti_spoof.py  audit.py  email.py  gmail.py  (+3 more)
backend/tests/: conftest.py  e2e_all_endpoints.py  test_api.py  test_smoke.py
(+146 files in other folders)
