[project]
name = "fdm-tracker-backend"
version = "0.1.0"
description = "FDM Tracker backend API"
requires-python = ">=3.11"

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
